projects/compiler/test/typechecker/special_identifier/error_unknown_identifier.out
Error at %TEST_DIR%/typechecker/special_identifier/error_unknown_identifier.abra:1:9
Unknown special identifier 'hmm'
  |  val x = #hmm
             ^
